# JetReconstruction.jl

./: .JuliaFormatter.toml  .all-contributorsrc  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Project.toml  README.md  chep.jl  codecov.yaml  debug_cluster_sequence.jl  main.jl  test_valencia.jl  versions.js
.github/: dependabot.yml
benchmark/: Project.toml  README.md  benchmarks.jl  runbenchmarks.jl
compile/: Project.toml  README.md  build.jl  precompile_execution.jl
compile/downstream/: CMakeLists.txt  README.md  jetreconstruction_test.c
dev/: .documenter-siteinfo.json  404.html  examples.html  hashmap.json  index.html  objects.inv  search_index.js
docs/: Project.toml  README.md  anti-kt.pseudo  make.jl
examples/: .gitignore  Project.toml  README.md  animate-reconstruction.jl  benchmark.sh  instrumented-jetreco.jl  jetreco-constituents-nb.jl  jetreco-constituents.jl  jetreco-substructure.jl  jetreco.jl  parse-options.jl  softk.jl  softk_rt.jl  test.sh  visualise-jets-pluto.jl  visualise-jets.ipynb  visualise-jets.jl
ext/: EDM4hepJets.jl  JetBenchmarkPlots.jl  JetVisualisation.jl
hepmc3jl/: Manifest.toml  Project.toml
src/: Algo.jl  AlgorithmStrategyEnums.jl  BenchmarkStatistics.jl  ClusterSequence.jl  CommonJet.jl  CommonJetStructs.jl  EEAlgorithm.jl  EEAlgorithmValencia.jl  EEJet.jl  EEjet.jl  GenericAlgo.jl  GhostGeneration.jl  HepMC3.jl  JSONresults.jl  JetAreas.jl  JetRecoStrategies.jl  JetReconstruction.jl  JetUtils.jl  JetVis.jl  LundPlane.jl  Particle.jl  PlainAlgo.jl  PseudoJet.jl  Pseudojet.jl  RectangularGrid.jl  (+15 more)
(+1417 files in other folders)
